--- a/jeff.html
+++ b/jeff.html
@@ -75,7 +75,7 @@
                     <p style="padding: 8px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio veritatis eum porro quos molestiae, excepturi quas expedita enim optio autem, ut aperiam. Quasi quisquam dolorem ipsum quos amet dolores cumque!</p>
                     <a href="#" target="_blank">
                         <div class="Github">
-                            <img src="Github.png" alt="" style="width: 32px; height: 32px;">
+                            <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
                             <p>Github Repositorio</p>
                         </div>
                     </a>
