--- a/jeff.html
+++ b/jeff.html
@@ -64,7 +64,7 @@
                     <p style="padding: 8px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente necessitatibus nemo nesciunt labore aut sunt, atque veritatis quae, animi soluta fugit architecto exercitationem, aliquam quasi. Similique cum debitis veniam.</p>
                     <a href="https://github.com/Jeff1Little/Book-on-the-coffe" target="_blank">
                         <div class="Github">
-                            <img src="Github.png" alt="" style="width: 32px; height: 32px;">
+                            <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
                             <p>Github Repositorio</p>
                         </div>
                     </a>
@@ -85,10 +85,9 @@
                     <h3>Android</h3>
                     <p style="padding: 8px;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum velit illum eligendi explicabo laudantium? Labore tempore nostrum minus dolore voluptatum sint ullam. Porro alias hic reiciendis adipisci cupiditate. Facere, numquam!
                     </p>
-
                     <a href="https://github.com/Jeff1Little/Android" target="_blank">
                         <div class="Github">
-                            <img src="Github.png" alt="" style="width: 32px; height: 32px;">
+                            <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
                             <p>Github Repositorio</p>
                         </div>
                     </a>
