--- a/jeff.html
+++ b/jeff.html
@@ -73,7 +73,7 @@
                     <img src="img/CR.png" alt="Portifolio">
                     <h3>Portifolio </h3>
                     <p style="padding: 8px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio veritatis eum porro quos molestiae, excepturi quas expedita enim optio autem, ut aperiam. Quasi quisquam dolorem ipsum quos amet dolores cumque!</p>
-                    <a href="#" target="_blank">
+                    <a href="https://jeff1little.github.io/Portifolio/jeff.html">
                         <div class="Github">
                             <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
                             <p>Github Repositorio</p>
@@ -81,7 +81,7 @@
                     </a>
                 </div>
                 <div class="Android">
-                    <img src="img/CR.png" alt="">
+                    <img src="img/Android.png" alt="">
                     <h3>Android</h3>
                     <p style="padding: 8px;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum velit illum eligendi explicabo laudantium? Labore tempore nostrum minus dolore voluptatum sint ullam. Porro alias hic reiciendis adipisci cupiditate. Facere, numquam!
                     </p>
