--- a/jeff.html
+++ b/jeff.html
@@ -61,7 +61,7 @@
                 <div class="BC">
                     <img src="img/BC.png" alt="Books on the coffe">
                     <h3>Books on the Coffee</h3>
-                    <p style="padding: 8px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente necessitatibus nemo nesciunt labore aut sunt, atque veritatis quae, animi soluta fugit architecto exercitationem, aliquam quasi. Similique cum debitis veniam.</p>
+                    <p style="padding: 8px;">Loja de livros virtual desenvolvida com os seguintes objetivos de testar meus conhecimentos e me desafiar para buscar experiencia e melhoria.</p>
                     <a href="https://github.com/Jeff1Little/Book-on-the-coffe" target="_blank">
                         <div class="Github">
                             <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
@@ -72,8 +72,9 @@
                 <div class="CR">
                     <img src="img/CR.png" alt="Portifolio">
                     <h3>Portifolio </h3>
-                    <p style="padding: 8px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio veritatis eum porro quos molestiae, excepturi quas expedita enim optio autem, ut aperiam. Quasi quisquam dolorem ipsum quos amet dolores cumque!</p>
-                    <a href="https://jeff1little.github.io/Portifolio/jeff.html">
+                    <p style="padding: 8px;">Este portfólio foi desenvolvido com os seguintes objetivos: apresentar meus projetos, destacar minhas habilidades técnicas e proporcionar uma navegação fluida e interativa para recrutadores e visitantes.
+                    </p>
+                    <a href="https://github.com/Jeff1Little/Portifolio">
                         <div class="Github">
                             <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
                             <p>Github Repositorio</p>
@@ -83,8 +84,7 @@
                 <div class="Android">
                     <img src="img/Android.png" alt="">
                     <h3>Android</h3>
-                    <p style="padding: 8px;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum velit illum eligendi explicabo laudantium? Labore tempore nostrum minus dolore voluptatum sint ullam. Porro alias hic reiciendis adipisci cupiditate. Facere, numquam!
-                    </p>
+                    <p style="padding: 8px;">Este é um Projeto desenvolvido no Curso de HTML-CSS do CursoemVide</p>
                     <a href="https://github.com/Jeff1Little/Android" target="_blank">
                         <div class="Github">
                             <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
