--- a/jeff.html
+++ b/jeff.html
@@ -41,17 +41,18 @@
                 <div class="card">
                     <img src="img/front.png" alt="Front-end">
                     <h2>Front-end</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam perferendis, illum minus sapiente id sed itaque hic quia fugiat dolores aspernatur temporibus tempora, laboriosam officia animi, consectetur mollitia voluptate soluta?</p>
+                    <p>Desenvolvo aplicações web com HTML5 e estilizando com CSS3, seguindo boas práticas para criação de interfaces modernas e responsivas.</p>
                 </div>
                 <div class="card">
                     <img src="img/BD.png" alt="Banco de dados.png">
                     <h2>Banco de dados</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur voluptatem minus voluptas adipisci officiis, nisi eos tempore laborum reprehenderit ea itaque omnis obcaecati sint libero. Laboriosam nam ipsa alias pariatur.</p>
+                    <p>Implementação de estruturas de dados eficientes, criação e manipulação de tabelas.</p>
                 </div>
                 <div class="card">
                     <img src="img/Data.png" alt="DATA">
                     <h2>Data Analytics</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, animi. Tenetur, itaque ab porro minima, voluptas excepturi sed quibusdam, eligendi blanditiis accusantium culpa reiciendis. Optio sint ut repellendus quas exercitationem?</p>
+                    <p>Atualmente estou em formação pelo Google Data Analytics Professional Certificate, onde estou desenvolvendo uma base sólida para trabalhar com dados de forma prática e estratégica.    
+                    </p>
                 </div>
             </div>
         </section>
@@ -61,7 +62,7 @@
                 <div class="BC">
                     <img src="img/BC.png" alt="Books on the coffe">
                     <h3>Books on the Coffee</h3>
-                    <p style="padding: 8px;">Loja de livros virtual desenvolvida com os seguintes objetivos de testar meus conhecimentos e me desafiar para buscar experiencia e melhoria.</p>
+                    <p style="padding: 8px; height: 100px;">Loja de livros virtual desenvolvida com os seguintes objetivos de testar meus conhecimentos e me desafiar para buscar experiencia e melhoria.</p>
                     <a href="https://github.com/Jeff1Little/Book-on-the-coffe" target="_blank">
                         <div class="Github">
                             <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
@@ -72,7 +73,7 @@
                 <div class="CR">
                     <img src="img/CR.png" alt="Portifolio">
                     <h3>Portifolio </h3>
-                    <p style="padding: 8px;">Este portfólio foi desenvolvido com os seguintes objetivos: apresentar meus projetos, destacar minhas habilidades técnicas e proporcionar uma navegação fluida e interativa para recrutadores e visitantes.
+                    <p style="padding: 8px; height: 100px;">Este portfólio foi desenvolvido com os seguintes objetivos: apresentar meus projetos, destacar minhas habilidades técnicas e proporcionar uma navegação fluida e interativa para recrutadores e visitantes.
                     </p>
                     <a href="https://github.com/Jeff1Little/Portifolio">
                         <div class="Github">
@@ -84,7 +85,7 @@
                 <div class="Android">
                     <img src="img/Android.png" alt="">
                     <h3>Android</h3>
-                    <p style="padding: 8px;">Este é um Projeto desenvolvido no Curso de HTML-CSS do CursoemVide</p>
+                    <p style="padding: 8px; height: 100px;">Este é um Projeto desenvolvido no Curso de HTML-CSS do CursoemVide</p>
                     <a href="https://github.com/Jeff1Little/Android" target="_blank">
                         <div class="Github">
                             <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
