--- a/jeff.html
+++ b/jeff.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio Jefferson</title>
     <link rel="stylesheet" href="style1.css">
+    <link rel="shortcut icon" href="img/Favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -62,7 +63,7 @@
                 <div class="BC">
                     <img src="img/BC.png" alt="Books on the coffe">
                     <h3>Books on the Coffee</h3>
-                    <p style="padding: 8px; height: 100px;">Loja de livros virtual desenvolvida com os seguintes objetivos de testar meus conhecimentos e me desafiar para buscar experiencia e melhoria.</p>
+                    <p style="padding: 8px; height: 100px;">Loja de livros virtual desenvolvida com o objetivo de testar meus conhecimentos e me desafiar para buscar experiencia e melhoria.</p>
                     <a href="https://github.com/Jeff1Little/Book-on-the-coffe" target="_blank">
                         <div class="Github">
                             <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
