--- a/jeff.html
+++ b/jeff.html
@@ -86,7 +86,7 @@
                 <div class="Android">
                     <img src="img/Android.png" alt="">
                     <h3>Android</h3>
-                    <p style="padding: 8px; height: 100px;">Este é um Projeto desenvolvido no Curso de HTML-CSS do CursoemVide</p>
+                    <p style="padding: 8px; height: 100px;">Este é um Projeto desenvolvido no Curso de HTML-CSS do <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
                     <a href="https://github.com/Jeff1Little/Android" target="_blank">
                         <div class="Github">
                             <img src="img/Github.png" alt="" style="width: 32px; height: 32px;">
