Texto About refinado

--- a/jeff.html
+++ b/jeff.html
@@ -27,10 +27,14 @@
             <div class="text-about">
                 <h1>Hello World!</h1>
                 <h3>Eu me chamo <class>Jefferson</class></h3>
-                <p>Olá, me chamo Jefferson, atualmente trabalho na area administrativa porem desde pequeno nutro um amor pela area de TI e tudo relacionado a computadores e programação principalmente, sou muito curioso para aprender como as coisas funcionam tanto que aos meus 13 anos aprendi a montar e consertar computadores apenas mexendo em hardwares velhos que encontrava.
+                <p>
+                    Atualmente atuo na área administrativa do tradicional restaurante Brasserie Victoria. Desde a infância, sou apaixonado por tecnologia da informação, especialmente por tudo que envolve computadores e programação. Minha curiosidade em entender como as coisas funcionam sempre me impulsionou a aprender por conta própria. Com apenas 13 anos, aprendi a montar e consertar computadores explorando e testando componentes de hardwares antigos que encontrava.
                 </p>
                 <p>
-                    Atualmente estou a procura de uma oportunidade de fazer esta transição de carreira e agregar conhecimento e aprender com uma nova equipe.
+                    Tenho investido em minha formação por meio de cursos voltados à área de TI, como Banco de Dados (Fundação Bradesco), HTML e CSS (Curso em Vídeo) e Data Analytics (Google/Coursera), buscando aprofundar meus conhecimentos técnicos e ampliar minha visão sobre o setor.
+                </p>
+                <p>
+                   Atualmente, busco oportunidades para ingressar profissionalmente na área de tecnologia, com interesse especial em suporte técnico, infraestrutura ou análise de dados, onde eu possa aplicar minha paixão, dedicação e vontade de aprender.
                 </p>
                 <button><a href="#">Curriculo</a></button>
             </div>
