Test links header

--- a/jeff.html
+++ b/jeff.html
@@ -12,9 +12,9 @@
         <nav>
             <h2> < Jefferson /></h2>
             <div>
-                <a href="#about"> Sobre</a>
-                <a href="#comp">Competencias</a>
-                <a href="#proj"> Projetos</a>
+                <a href="https://jeff1little.github.io/Portifolio/jeff.html/#about"> Sobre</a>
+                <a href="https://jeff1little.github.io/Portifolio/jeff.html/#comp">Competencias</a>
+                <a href="https://jeff1little.github.io/Portifolio/jeff.html/#proj"> Projetos</a>
             </div>
             <div>
                 <a href="https://github.com/Jeff1Little" target="_blank">Github</a>
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <section class="about">
+        <section class="about" id="about">
             <div class="text-about">
                 <h1>Hello World!</h1>
                 <h3>Eu me chamo <class>Jefferson</class></h3>
@@ -36,7 +36,7 @@
                 <p>
                    Atualmente, busco oportunidades para ingressar profissionalmente na área de tecnologia, com interesse especial em suporte técnico, infraestrutura ou análise de dados, onde eu possa aplicar minha paixão, dedicação e vontade de aprender.
                 </p>
-                <button><a href="#">Curriculo</a></button>
+                <button><a href="img/Curriculo - Jefferson.docx">Curriculo</a></button>
             </div>
             <img src="img/1718254788591.jpg" alt="img">
         </section>
