--- a/jeff.html
+++ b/jeff.html
@@ -19,6 +19,7 @@
             <div>
                 <a href="https://github.com/Jeff1Little" target="_blank">Github</a>
                 <a href="https://www.linkedin.com/in/jefferson-da-cruz-pereira-056632305/" target="_blank">Linkedin</a>
+                <a href="https://wa.me/message/QO42YJYBL7DAF1">Contato</a>
             </div>
         </nav>
     </header>
